add css and some work

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first website</title>
+    <link rel="stylesheet" href="styls/blog.css">
 </head>
 <body>
+    <h1>First git Website</h1>
     
+    <div>
+        <h2>First Paragraph</h2>
+    <p id="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore vero adipisci sunt hic nulla doloribus ipsa perspiciatis. Voluptatibus commodi perspiciatis nesciunt corrupti distinctio praesentium laboriosam, hic ea, magni magnam repellendus.</p>
+    </div>
+    <div>
+        
+        <h2>First Paragraph</h2>
+    <p id="p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore vero adipisci sunt hic nulla doloribus ipsa perspiciatis. Voluptatibus commodi perspiciatis nesciunt corrupti distinctio praesentium laboriosam, hic ea, magni magnam repellendus.</p>
+    </div>
+
+    <div>
+        <h2>First Paragraph</h2>
+    <p id="p3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore vero adipisci sunt hic nulla doloribus ipsa perspiciatis. Voluptatibus commodi perspiciatis nesciunt corrupti distinctio praesentium laboriosam, hic ea, magni magnam repellendus.</p>
+    </div>
+
+    <div>
+        <h2>First Paragraph</h2>
+    <p id="p4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore vero adipisci sunt hic nulla doloribus ipsa perspiciatis. Voluptatibus commodi perspiciatis nesciunt corrupti distinctio praesentium laboriosam, hic ea, magni magnam repellendus.</p>
+    </div>
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
