add khabar list

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     </div>
 
 
+    <h2><b><i>Add some Khayon dayon</i></b></h2>
+    <ul>
+        <li>Muri</li>
+        <li>Mosla</li>
+        <li>Chanachur</li>
+        
+    </ul>
+
+
     <footer>
 
     </footer>
