add git incremental code

--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
     </div>
 
 
-    <h2><b><i>Add some Khayon dayon</i></b></h2>
+    <div>
+        <h2>Add some Khayon dayon</h2>
     <ul>
         <li>Muri</li>
         <li>Mosla</li>
         <li>Chanachur</li>
         
     </ul>
+    </div>
+
+    <div>
+        <h2>How to push incremental code</h2>
+        <ol>
+            <li class="git push">git add .</li>
+            <li class="git push">git commit -m"meaningful commit massage"</li>
+            <li class="git push">git push</li>
+        </ol>
+    </div>
 
 
     <footer>
