add git color and cmd push

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <div>
         <h2>How to push incremental code</h2>
         <ol>
-            <li class="git push">git add .</li>
-            <li class="git push">git commit -m"meaningful commit massage"</li>
-            <li class="git push">git push</li>
+            <li class="gitpush">git add .</li>
+            <li class="gitpush">git commit -m"<span style="color: brown; font-family:'Courier New', Courier, monospace;">meaningful commit massage</span>"</li>
+            <li class="gitpush">git push</li>
         </ol>
     </div>
 
