add a saad picture

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
             <li class="gitpush">git add .</li>
             <li class="gitpush">git commit -m"<span style="color: brown; font-family:'Courier New', Courier, monospace;">meaningful commit massage</span>"</li>
             <li class="gitpush">git push</li>
+
         </ol>
+
+    </div>
+
+    <div>
+        <h2>Ami dim khai protidin</h2>
+        <img src="image/saad (2).jpg" alt="Saad" height="250" width="500">
     </div>
 
 
