add internal css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first website</title>
     <link rel="stylesheet" href="styls/blog.css">
+
+    <style>
+        #khabarlist{
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <h1>First git Website</h1>
@@ -32,7 +38,7 @@
 
     <div>
         <h2>Add some Khayon dayon</h2>
-    <ul>
+    <ul id="khabarlist">
         <li>Muri</li>
         <li>Mosla</li>
         <li>Chanachur</li>
