add mahfuher gun

--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
     </div>
 
 
+    <div>
+        <h2>Mahfujer valo gun</h2>
+        <ul>
+            <li><span class="gitpush">Barir moddhe gun</span>
+                <ol class="gun">
+                    <li><span style="color: brown;"><b><i>Ranna</i></b></span> valo Pare</li>
+                    <li>Gas lagate pare</li>
+                    <li>Ghor guchiye rakhe</li>
+                </ol>
+            </li>
+            <li><span class="gitpush">Barir baire gun</span>
+                <ol class="gun">
+                    <li>Kaj valo kore</li>
+                    <li>Kamla valo dey</li>
+                    <li>Cycle chalate pare</li>
+                </ol>
+            </li>
+        </ul>
+    </div>
+
     <footer>
 
     </footer>
